--- a/tasks/Makefile.cardano
+++ b/tasks/Makefile.cardano
@@ -3,12 +3,18 @@
 # use container build from iohk to provide access to CLI
 # output can be found in ./artifacts directory
 #
-CARDANO_VERSION ?= 1.28.0
+CARDANO_VERSION ?= 1.29.0
+CARDANO_NETWORK ?= mainnet
 CARDANO_CLI = docker run -it --entrypoint="" \
 	-w /artifacts --volume $(ARTIFACTS_DIR):/artifacts:z \
 	docker.io/inputoutput/cardano-node:$(CARDANO_VERSION) \
 	cardano-cli
-CARDANO_CLI_MAGIC ?= --testnet-magic 1097911063
+
+ifeq ($(CARDANO_NETWORK), mainnet)
+	CARDANO_CLI_MAGIC = --mainnet
+else
+	CARDANO_CLI_MAGIC ?= --testnet-magic 1097911063
+endif
 
 METADATA_POOL_NAME ?= TestPool
 METADATA_POOL_DESCRIPTION ?= The pool that tests all the pools.
